@@ -2,6 +2,10 @@ SubVersion: $Id$
 	
 Log:
 
+- 26/01/2008, version 1.1.2: roms
+	- added real support of OS 1.2 & 1.3 (true LOGIN packet support)
+	- NSpire sequence number implemented fine now
+
 - 22/01/2008, version 1.1.1: roms
 	- added unknown directory list command for NSpire
 	
